--- a/src/style.css
+++ b/src/style.css
@@ -131,7 +131,7 @@ main {
     border: 0;
 }
 
-.task-form {
+.task-form, .project-form {
     display: none;
     flex-direction: column;
     gap: 1rem;
