--- a/src/style.css
+++ b/src/style.css
@@ -68,7 +68,7 @@ aside ul {
 .list-item-btn {
     display: block; /* Makes the button full width */
     width: 100%;
-    padding: 10px;
+    padding: 2px 3px;
     border: none;
     background-color: transparent;
     text-align: left;
