refactor display function

--- a/src/style.css
+++ b/src/style.css
@@ -79,7 +79,7 @@ aside ul {
     align-items: center;
   }
   
-  .list-icon {
+  .btn-icon {
     width: 20px;
     margin-right: 10px; /* Adjust as needed */
   }
