--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,11 @@ aside ul {
     margin-top: 4rem;
 }
 
+.list-icon {
+    width: 20px;
+    height: 20px;
+}
+
 .aside-categories a {
     text-decoration: none;
     
@@ -57,6 +62,7 @@ aside ul {
     background-color: grey;
 }
 
+
 .list-label {
     display: flex;
     align-items: center;
@@ -68,16 +74,18 @@ aside ul {
 
 .list-item-btn {
     display: flex; /* Makes the button full width */
-    gap: 3px;
     width: 100%;
     padding: 2px 3px;
     border: none;
     background-color: transparent;
     text-align: left;
+    font-size: inherit;
+    font-family: inherit;
   }
   
   .list-item-container {
     display: flex;
+    gap: .5rem;
     align-items: center;
   }
   
